generator client {
  provider = "prisma-client-js"
}

generator dbl {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// This model is used to store the project information.
model Project {
  id               Int      @id @default(autoincrement())
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  title            String   @db.VarChar(255)
  shortDescription String   @db.VarChar(255)

  userId Int
  author User @relation(fields: [userId], references: [id], onDelete: Restrict, onUpdate: Cascade)

  projectUsers ProjectUser[]
  devices      Device[]

  public Boolean

  imgKey      String        @db.VarChar(255)
  ApiKey      ApiKey[]
  TtnProvider TtnProvider[]

  story String @default("No story yet") @db.Text
}

// This model is used to store the TTN provider information for a project.
// Each project can have one or more TTN provider, and the provider information is stored here.
model TtnProvider {
  id          Int      @id @default(autoincrement())
  project     Project  @relation(fields: [projectId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  projectId   Int
  appUrl      String   @db.VarChar(255)
  appId       String   @db.VarChar(255)
  apiKey      String   @db.VarChar(500)
  addedAt     DateTime @default(now())
  createdBy   User?    @relation(fields: [createdByid], references: [id], onDelete: SetNull, onUpdate: Cascade)
  createdByid Int?

  TtnDeviceDetail TtnDeviceDetail[]
}

// This model is used to store the project user information.
// Each project can have one or more users, and the user information is stored here.
// The user can be an admin or a normal user.
// The admin user has the ability to manage the project and its users.
model ProjectUser {
  id Int @id @default(autoincrement())

  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  projectId Int

  user   User @relation(fields: [userId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  userId Int

  admin Boolean

  @@unique([projectId, userId]) //User kan niet nog ééns worden toegevoegd aan een project
}

// This model is used to store the user information for a project.
// Each user can have one or more projects, and the user information is stored here.
model User {
  id           Int           @id @default(autoincrement())
  providerId   String        @unique
  email        String        @unique
  name         String
  admin        Boolean       @default(false)
  projects     Project[]
  projectUsers ProjectUser[]

  Device Device[]

  TtnProvider TtnProvider[]
}

// This model is used to store the base device information for a project.
// Each project can have one or more devices, and the device information is stored here.
// The device can be a sensor or a camera or something else and the device information is stored here.
model Device {
  id         String  @id @unique @default(uuid())
  deviceType String
  project    Project @relation(fields: [projectId], references: [id], onDelete: Restrict, onUpdate: Cascade)
  projectId  Int

  name        String   @db.VarChar(255)
  description String   @db.VarChar(500)
  latitude    Decimal
  longitude   Decimal
  imgKey      String   @db.VarChar(255)
  createdBy   User?    @relation(fields: [createdByid], references: [id], onDelete: SetNull, onUpdate: Cascade)
  createdByid Int?
  createdAt   DateTime @default(now())

  sendsFirstArgumentAsTimestamp Boolean @default(false)

  deviceParameters deviceParameters[]
  TtnDeviceDetail  TtnDeviceDetail?
}

// This model is used to store the device parameters for a device.
// Each device can have one or more parameters, and the parameter information is stored here.
model deviceParameters {
  id          Int    @id @default(autoincrement())
  deviceId    String
  device      Device @relation(fields: [deviceId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  name        String @db.VarChar(255)
  description String @db.VarChar(500)
}

// This model is used to store the ttn information for a device.
model TtnDeviceDetail {
  id       Int    @id @default(autoincrement())
  device   Device @relation(fields: [deviceId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  deviceId String @unique //Device ID

  ttnDeviceId String @db.VarChar(255) //Device ID in TTN

  // TTN provider that the device is linked to
  ttnProvider   TtnProvider @relation(fields: [ttnProviderId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  ttnProviderId Int
}

// This model is used to store the API key information for a project.
// Each project can have one or more API keys, and the API key information is stored here.
model ApiKey {
  id        Int     @id @default(autoincrement())
  name      String
  key       String  @unique
  //Todo generatedby ==> accountability
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  projectId Int
}

model Session {
  sid    String   @id @db.VarChar
  sess   Json
  expire DateTime @db.Timestamp(6)

  @@map("session") // map to the actual table name
}
