//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Project {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  shortDescription String [not null]
  userId Int [not null]
  author User [not null]
  projectUsers ProjectUser [not null]
  devices Device [not null]
  public Boolean [not null]
  imgKey String [not null]
  ApiKey ApiKey [not null]
  TtnProvider TtnProvider [not null]
  story String [not null, default: 'No story yet']
}

Table TtnProvider {
  id Int [pk, increment]
  project Project [not null]
  projectId Int [not null]
  appUrl String [not null]
  appId String [not null]
  apiKey String [not null]
  addedAt DateTime [default: `now()`, not null]
  createdBy User
  createdByid Int
  TtnDeviceDetail TtnDeviceDetail [not null]
}

Table ProjectUser {
  id Int [pk, increment]
  project Project [not null]
  projectId Int [not null]
  user User [not null]
  userId Int [not null]
  admin Boolean [not null]

  indexes {
    (projectId, userId) [unique]
  }
}

Table User {
  id Int [pk, increment]
  providerId String [unique, not null]
  email String [unique, not null]
  name String [not null]
  admin Boolean [not null, default: false]
  projects Project [not null]
  projectUsers ProjectUser [not null]
  Device Device [not null]
  TtnProvider TtnProvider [not null]
}

Table Device {
  id String [pk]
  deviceType String [not null]
  project Project [not null]
  projectId Int [not null]
  name String [not null]
  description String [not null]
  latitude Decimal [not null]
  longitude Decimal [not null]
  imgKey String [not null]
  createdBy User
  createdByid Int
  createdAt DateTime [default: `now()`, not null]
  sendsFirstArgumentAsTimestamp Boolean [not null, default: false]
  deviceParameters deviceParameters [not null]
  TtnDeviceDetail TtnDeviceDetail
}

Table deviceParameters {
  id Int [pk, increment]
  deviceId String [not null]
  device Device [not null]
  name String [not null]
  description String [not null]
}

Table TtnDeviceDetail {
  id Int [pk, increment]
  device Device [not null]
  deviceId String [unique, not null]
  ttnDeviceId String [not null]
  ttnProvider TtnProvider [not null]
  ttnProviderId Int [not null]
}

Table ApiKey {
  id Int [pk, increment]
  name String [not null]
  key String [unique, not null]
  project Project [not null]
  projectId Int [not null]
}

Table session {
  sid String [pk]
  sess Json [not null]
  expire DateTime [not null]
}

Ref: Project.userId > User.id [delete: Restrict]

Ref: TtnProvider.projectId > Project.id [delete: Cascade]

Ref: TtnProvider.createdByid > User.id [delete: Set Null]

Ref: ProjectUser.projectId > Project.id [delete: Cascade]

Ref: ProjectUser.userId > User.id [delete: Cascade]

Ref: Device.projectId > Project.id [delete: Restrict]

Ref: Device.createdByid > User.id [delete: Set Null]

Ref: deviceParameters.deviceId > Device.id [delete: Cascade]

Ref: TtnDeviceDetail.deviceId - Device.id [delete: Cascade]

Ref: TtnDeviceDetail.ttnProviderId > TtnProvider.id [delete: Cascade]

Ref: ApiKey.projectId > Project.id [delete: Cascade]